<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Layouts_Sample</string>
    <string name="textview">TextView</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="todo">TODO</string>
    <string name="hello_android_Q">Hello, Android Q(10)</string>
    <string name="textview1">Hello,</string>
    <string name="textview2">Android</string>
    <string name="textview3">Q(10)!</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="textview888">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview8">TextView</string>
    <string name="textview11">TextView</string>
    <string name="what_is_lorem_ipsum">What is Lorem Ipsum?</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_like_aldus_pagemaker_including_versions_of_lorem_ipsum" tools:ignore="DuplicateDefinition">Lorem Ipsum is simply dummy text of the printing and typesetting industry...like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry...like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry...like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry...like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry...like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry...like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry...like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry...like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="why_do_we_use_it">Why do we use it?</string>
    <string name="where_can_i_get_some">Where can I get some?</string>
    <string name="there_are_many_variations_of_passages_of_lorem_ipsum_available_or_non_characteristic_words_etc_there_are_many_variations_of_passages_of_lorem_ipsum_available_or_non_characteristic_words_etc_there_are_many_variations_of_passages_of_lorem_ipsum_available_or_non_characteristic_words_etc_there_are_many_variations_of_passages_of_lorem_ipsum_available_or_non_characteristic_words_etc_there_are_many_variations_of_passages_of_lorem_ipsum_available_or_non_characteristic_words_etc_there_are_many_variations_of_passages_of_lorem_ipsum_available_or_non_characteristic_words_etc_there_are_many_variations_of_passages_of_lorem_ipsum_available_or_non_characteristic_words_etc_there_are_many_variations_of_passages_of_lorem_ipsum_available_or_non_characteristic_words_etc">There are many variations of passages of Lorem Ipsum available ... or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available ... or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available ... or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available ... or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available ... or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available ... or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available ... or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available ... or non-characteristic words etc.</string>
    <string name="constraintlayout_nsample">ConstraintLayout\nSample</string>
    <string name="scrolllayout_nsample">ScrollLayout\nSample</string>
    <string name="todo5">TODO</string>
    <string name="todo3">TODO</string>
    <string name="gridlayout_nsample5">GridLayout\nSample</string>
    <string name="framelayout_nsample66">FrameLayout\nSample</string>
    <string name="linearlayout_nsample55">LinearLayout\nSample</string>
    <string name="relativelayout_nsample88">RelativeLayout\nSample</string>
    <string name="tablelayout_nsample123">TableLayout\nSample</string>
    <string name="login">Login</string>
    <string name="email3">Email</string>
    <string name="password3">Password</string>
    <string name="todo55">TODO</string>
    <string name="todo666">TODO</string>
</resources>
