<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context="com.flame4ost.layouts_sample.LinearActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#e0e0e0"
        android:text="@string/textview1"
        android:textSize="30sp"
        tools:text="Hello" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#eeeeee"
        android:text="@string/textview2"
        android:textSize="30sp"
        tools:text="Android" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#bdbdbd"
        android:text="@string/textview3"
        android:textSize="30sp"
        tools:text="Q(10)" />
</LinearLayout>
