<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flame4ost.layouts_sample.ConstraintActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#3f51b5"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry ... remaining essentially unchanged"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="93dp"
        android:layout_height="53dp"
        android:text="@string/cancel"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="93dp"
        android:layout_height="0dp"
        android:layout_marginRight="16dp"
        android:text="@string/ok"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintRight_toLeftOf="@+id/button1"
        android:layout_marginEnd="16dp" />
</android.support.constraint.ConstraintLayout>
