<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.flame4ost.layouts_sample.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearSample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewLinear"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                app:srcCompat="@drawable/letter_l_icon"
                android:contentDescription="@string/todo55" />

            <TextView
                android:id="@+id/textViewLinear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/linearlayout_nsample55"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relativeSample"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewRelative"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                app:srcCompat="@drawable/letter_r_icon" />

            <TextView
                android:id="@+id/textViewRelative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/relativelayout_nsample88"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tableSample"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewTable"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                app:srcCompat="@drawable/letter_t_icon"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textViewTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tablelayout_nsample123"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frameSample"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewFrame"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                app:srcCompat="@drawable/letter_f_icon"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textViewFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/framelayout_nsample66"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gridSample"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewGrid"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                app:srcCompat="@drawable/letter_g_icon"
                android:contentDescription="@string/todo666" />

            <TextView
                android:id="@+id/textViewGrid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gridlayout_nsample5"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintSample"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewConstraint"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                app:srcCompat="@drawable/letter_c_icon"
                android:contentDescription="@string/todo3" />

            <TextView
                android:id="@+id/textViewConstraint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/constraintlayout_nsample"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scrollSample"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewScroll"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                app:srcCompat="@drawable/letter_s_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textViewScroll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scrolllayout_nsample"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
