<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flame4ost.layouts_sample.TableActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="22sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email3"
                android:textSize="22sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/password3"
                android:textSize="22sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:inputType="textVisiblePassword" />
        </TableRow>

    </TableLayout>

</FrameLayout>
